--- a/src/pages/instagram/posts.styles.scss
+++ b/src/pages/instagram/posts.styles.scss
@@ -5,6 +5,7 @@
   background: var(--color-bg);
   width: 100%;
   min-height: 90vh;
+  margin: 0 auto;
 
   .post-card {
     display: flex;
